phpMyAdmin - ChangeLog
----------------------

$Id$
$HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyAdmin/ChangeLog $

3.2.4.0 (not yet released)
- bug [engines] Innodb_buffer_pool_pages_latched no longer returned in status 
- bug #2890451 [setup] Inconsistent generated "designer_coords" 
- bug #2890443 [mysqli] "No index used in query" exception is reported 

3.2.3.0 (2009-10-30)
- patch #2856664 [export] Date, time, and datetime column types now export correctly to
  OpenOffice Spreadsheet, thanks to Thomas Pulickal - jemajoign
- patch #2859788 [parser] Double-character delimiters (bug #2846239), 
  thanks to Thomas Pulickal - jemajoign
- bug #2832600 [export] Slow export when having lots of databases 
- bug #2537766 [import] Comments are stripped when editing store procedures 
- bug #2852370 [operations] Renaming database deletes triggers 
- bug #2872247 [interface] Failed opening required 'mysql_charsets.lib.php', thanks to CyberLeo Kitsana - cyberleo
- bug [structure] "In use" table incorrectly reported as "view" 
- bug #2879909 [interface] Removed double htmlspecialchars when editing enum column
- bug #2868328 [relations] Adding foreign key when table name contains a dot 
- bug #2883381 [doc] Side effects of MemoryLimit setting 
- bug #2826128 [display] Inverting sort order when expression contains a function name

3.2.2.1 (2009-10-12)
- [security] XSS and SQL injection, thanks to Herman van Rink

3.2.2.0 (2009-09-13)
- bug #2825293 [structure] Default value for a BIT column
- bug [display] Red arrows were reversed in the list of tables 
- bug #2813879 [export] Duplicate empty lines when exporting without comments 
- bug #2825919 [export] Trigger export with database name 
- bug #2823996 [data] Cannot edit row with no PK and a BIT field 
- bug [export] Exporting results of a query which contains a LIMIT clause
  inside a subquery
- bug #2837722 [export] Run complex SQL then export does not work 